--- a/home/templates/sources/nsi/internet/competence13.html
+++ b/home/templates/sources/nsi/internet/competence13.html
@@ -3,16 +3,144 @@
 
 {% block contenu %}
 <ul>
-    
+    <li>le principe des réseaux sociaux</li>
+    <li>les traces numériques</li>
+    <li>comment les réseaux sociaux se rémunèrent</li>
+    <li>une bulle informationnelle</li>
+    <li>la dérive des fake news</li>
+    <li>le harcèlement lié aux réseaux sociaux</li>
 </ul>
 {% endblock contenu %}
 
 {% block cours %}
 
-<div class="row">
-    <div class="col-12">
-        <iframe src="{% static 'home/documents/TP_reseauxSociaux.pdf' %}" height='1200px' width='1100px' type='application/pdf'></iframe>
-    </div>
+<h3>Introduction</h3>
+
+<p>La vidéo suivante publiée par <em>Absolute Motivation</em> sur YouTube met en avant les dangers des <em>social medias</em> :
+<br/><a href="https://www.youtube.com/watch?v=PmEDAzqswh8" target="_blank">&#127911; video Social Media - Absolute Motivation</a></p>
+
+<!-- QUELS RESEAUX SOCIAUX -->
+<h3>Le principe des réseaux sociaux</h3>
+
+<p>La vidéo suivante publiée par <em>Lumni</em> sur YouTube met en avant le temps passé quotidiennement sur les réseaux sociaux :
+<br/><a href="https://youtu.be/ltTHAE_C-XI" target="_blank">&#127911; video Réseaux sociaux tous accros - Lumni</a></p>
+    
+
+<p>Les réseaux sociaux se construisent à partir de communautés qui partagent des intérêts communs, et qui sont 
+    reliées entre elles par des liens faibles. Ces liens faibles permettent donc de rassembler dans un même réseau 
+    des sous-groupes d'individus qui n'ont pas forcément beaucoup de points communs. Par exemple si vous avez changé 
+    d'école, votre réseau Instagram pourrait être composé de vos amis rencontrés dans votre ancienne école, mais également
+     de vos amis de classe actuels. Ces liens faibles semblent anodins alors qu'ils sont en réalité 
+    particulièrement importants, vu qu'ils permettent de relier des individus que rien ne rapproche a priori. 
+    Ils facilitent ainsi la circulation de l'information à grande échelle.</p>
+
+<div class="exerciceApplication">
+<p><strong>A vous de jouer : </strong><br/>1) Enoncez les réseaux sociaux que vous connaissez, en indiquant ce qui caractérise chacun d'entre eux.<br/>
+2) A l'aide d'une recherche sur Internet, trouvez le nombre d'abonnés de chacun de ces réseaux sociaux pour l'année
+ dernière. Quel est le réseau le plus influent parmi ceux qui vous utilisez ?</p>
 </div>
+
+<h4>Avis des élèves</h4>
+<p>"C'est un moyen d'avoir une vie sociale plus active et de pouvoir communiquer plus directement."</p>
+<p>"C'est un moyen plus dangereux de communiquer, vu que c'est à travers un écran et qu'on ne sait pas vraiment avec 
+    qui on parle.</p>
+
+
+<!-- LES TRACES NUMERIQUES -->
+<h3>Les traces numériques</h3>
+
+<p>Dès qu'un utilisateur consulte le Web, il laisse des traces numériques involontaires (dans l'historique du moteur de recherche, dans 
+    les cookies des sites, ...), puis des traces numériques volontaires lorsqu'il crée un compte en 
+    s'identifiant et en répondant à diverses questions. Le regroupement de ces traces numériques, d'un réseau social à 
+un autre, construit l'identité numérique de chaque utilisateur qui est stockée et mise à jour en permanence dans des bases 
+de données. Les algorithmes des réseaux sociaux permettent d'affiner la personnalité numérique des utilisateurs et de 
+proposer en permanence des invitations ciblées ou du contenu approprié sur le feed personnel d'un utilisateur. </p>
+
+<div class="exerciceApplication">
+    <p><strong>A vous de jouer : </strong>comment l'utilisateur peut-il assurer sa confidentialité sur le Web ?</p>
+    </div>
+
+<!-- COMMENT LES RESEAUX SOCIAUX SE REMUNERENT ILS -->
+<h3>Comment les réseaux sociaux se rémunèrent</h3>
+
+<p>La plupart des réseaux sociaux sont gratuits. Ils ne trouvent donc pas dans l'abonnement leur principale source de revenue. En fait, les réseaux sociaux collectent et stockent une importante quantité de données personnelles, qu'ils revendent ensuite à des fins commerciales. Pour cela, les réseaux sociaux ont besoin de maintenir le plus longtemps possible les utilisateurs sur leurs plateformes, et utilisent des coockies pour enregistrer l'information.</p>
+
+<p>Chaque saisie clavier est enregistrée, chaque clic pour choisir une image, une vidéo, un lien est analysé par intelligence artificielle, chaque localisation géographique est conservée. Chaque proposition faite par un réseau social, qu'elle soit rejetée ou acceptée par l'utilisateur est interprétée pour imaginer les habitudes et les centres d'intérêt de cet utilisateur. Par la suite, de la publicité ciblée en fonction des goûts de l'utilisateur mais également de sa position géographique lui sera proposée. On parle de tracking publicitaire qui consiste à combiner les données marketing personnelles avec les données géolocalisées. Cette publicité, bien plus efficace qu'une publicité grand public, rapporte énormément d'argent aux réseaux sociaux.</p>
+
+<p>Le système des Adwords rapporte de l'argent à certains réseaux sociaux. Le placement publicitaire en haut d'une page de recherche pour contrebalancer le référencement naturel est payant. En outre, à chaque fois qu'un utilisateur clique sur un lien publicitaire en haut d'une page, affecté d'un préfixe <em>ad</em>, cela rapporte également de l'argent.</p>
+
+<p>Le financement des réseaux sociaux est donc basé sur techniques commerciales :
+<ul>
+    <li>collecte massive de données qui sont revendues</li>
+    <li>publicité ciblée rémunératrice</li>
+    <li>Adwords payants</li>
+</ul>
+</p> 
+
+<p>Le trailer suivant introduit le documentaire <em>The Social Dilemma</em> réalisé par Netflix :
+    <a href="https://youtu.be/uaaC57tcci0" target="_blank">&#127911; video trailer Social Dilemma - Netflix</a>
+ qui présente l'utilisation des données enregistrées par les réseaux sociaux.</p>
+
+ <div class="exerciceApplication">
+    <p><strong>A vous de jouer : </strong>expliquez en détail les principales motivations qui poussent certaines entreprises et 
+        leurs sites Web à traquer nos données sur Internet.</p>
+    </div>
+
+    <p>"If you're not paying for something, you're not the customer, you're the product being sold" <em>Andrew Lewis</em></p>
+
+
+
+<!-- BULLE INFORMATIONNELLE -->
+<h3>Une bulle informationnelle</h3>    
+
+<p>Les algorithmes apprennent les préférences des utilisateurs en analysant leurs habitudes. Par la suite, les réseaux sociaux 
+    personnalisent l'information qu'ils proposent pour satisfaire ses utilisateurs. De ce fait, chaque utilisateur
+     ne reçoit qu'une information adaptée à ses préférences et finit par se persuader que la plupart des 
+     internautes partagent ses opinions. Ainsi un utilisateur trouve ce qu'il cherche et se voit proposer 
+     principalement les sujets qui l'intéressent et qui le confortent dans ses opinions. Les réseaux sociaux, de 
+     par leur nature, génèrent une désinformation rassurante pour l'utilisateur. Cette personnalisation de la désinformation 
+    s'appelle une bulle informationnelle.</p>
+
+<div class="exerciceApplication">
+    <p><strong>A vous de jouer : </strong><br/>
+        1) En effectuant une recherche sur Internet, indiquez ce que rapporte chaque année à
+         Google la vente de nos données personnelles recueillies en utilisant ce moteur de recherche.<br/>
+        2) Quelles sont vos attentes lorsque vous utilisez des réseaux sociaux ?<br/>
+        3) Quels avantages peut-on trouver à ce concept de bulle informationnelle ?<br/>
+        4) Pour quelle raison les influenceurs ont-ils autant d'importance sur les réseaux sociaux ?</p>
+</div>
+
+
+    <!-- LA DERIVE DES FAKE NEWS -->
+<h3>La dérive des fake news</h3>
+
+<p>De nos jours, les influenceurs, susceptibles d'influencer le comportement et l'opinion d'un nombre important de consommateurs, obtiennent de véritables marchés commerciaux avec les entreprises. Ils sont également rémunérés par les réseaux sociaux en fonction du nombre de leurs abonnés.</p>
+
+<p>Malheureusement, pour obtenir une audience de plusieurs millions, certains n'hésitent pas à propager des images choc et de l'information mensongère. La dérive des fake news est largement critiquée par la télévision, qui n'est pas non plus exempte de tout reproche à cet égard.
+    On estime qu'une fake news se propage en moyenne 6 fois plus vite qu'une information confirmée.</p>
+
+
+
+ <p>Le trailer suivant introduit le documentaire <em>The Great Hack</em> réalisé par Netflix :
+    <a href="https://youtu.be/iX8GxLP1FHo" target="_blank">&#127911; video trailer Great Hack - Netflix</a>
+ qui présente comment l'information peut être transformée à des fins commerciales ou politiques.</p>
+ 
+ <div class="exerciceApplication">
+    <p><strong>A vous de jouer : </strong>quelle technique utilisez-vous pour déceler un fake news ?</p>
+</div>
+    
+<h3>Le harcèlement lié aux réseaux sociaux</h3>
+
+<p>L'article 222-33-2-2 du code pénal définit le harcèlement et les peines encourues :</p>
+<p>"Le fait de harceler une personne par des propos ou comportements répétés ayant pour objet ou pour effet une 
+    dégradation de ses conditions de vie se traduisant par une altération de sa santé physique ou mentale est puni 
+    d'un an d'emprisonnement et de 15 000 € d'amende lorsque ces faits ont causé une incapacité totale de travail 
+    inférieure ou égale à huit jours ou n'ont entraîné aucune incapacité de travail."</p>
+    
+    <div class="exerciceApplication">
+        <p><strong>A vous de jouer : </strong><br/>
+            1) Quels sont les éléments constitutifs de l'infraction qualifiée de harcèlement ?<br/>
+            2) Quelle est la différence entre le code pénal et le code de procédure pénale ?</p>
+        </div>
 
 {% endblock cours %}
