--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -5,7 +5,6 @@
 <!-- HEAD -->
 
 <head>
-    
     <title> ToKeTa </title>
      
     <!-- framework bootstrap5
@@ -13,9 +12,10 @@
          feuille de style principale
          feuille de style relative aux codes colores
          favicon dans l'onglet du navigateur -->
-    <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC' crossorigin='anonymous'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <link rel='stylesheet' href="{% static 'home/styles/style53.css' %}">  
+    <link rel='stylesheet' href="{% static 'home/styles/style54.css' %}">  
     <link rel='stylesheet' href="{% static 'home/styles/prism.css' %}">  
     <link rel='icon' type='image/png' href="{% static 'home/images/general/symbole_circulaire.png' %}">
    
@@ -23,35 +23,34 @@
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-</head>  
-
+    
 
 <body>
-
-
-
 
 <!-- HEADER  -->
 
 <header>
-    <nav class="navbar navbar-expand-md fixed-top navbar-dark" style="background-color:var(--couleur_nav);">
+    <nav class="navbar navbar-expand-md fixed-top" style="background-color:white;box-shadow: 0px 2px lightgray;">
         <div class="container-fluid">
-            <a class="navbar-brand bi bi-x-diamond-fill fw-bold px-2" href="{% url 'creerIndex' %}" fw-bold>
-                <span class="bg-gradient p-1 rounded-3" style="background-color:var(--couleur_important)">ToK</span>eTa</a>
+
+            <a class="navbar-brand fw-bold" href="{% url 'creerIndex' %}">    
+                <img src="{% static 'home/images/general/toketa.png' %}" width="100px" class="center">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse fw-bold" id="navbarNav">
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link active px-3" aria-current="page" href="{% url 'afficherPresentation' niveau='python' %}" style="font-size:1.3em;">Python<span class="sr-only"></span></a>
-                    <a class="nav-item nav-link px-3" href="{% url 'afficherPresentation' niveau='nsi' %}" style="font-size:1.3em;">Sciences<br/>numériques</a>
-                    <a class="nav-item nav-link px-3" href="{% url 'afficherPresentation' niveau='maths' %}" style="font-size:1.3em;">Calcul<br/>numérique</a>
+
+            <div class="navbar-nav">
+                    <a class="nav-item nav-link active px-3" aria-current="page" href="{% url 'afficherPresentation' niveau='python' %}" style="font-size:1.3em;color:var(--couleur_titre);">Python<span class="sr-only"></span></a>
+                    <a class="nav-item nav-link px-3" href="{% url 'afficherPresentation' niveau='nsi' %}" style="font-size:1.3em;color:var(--couleur_titre);">Sciences<br/>numériques</a>
+                    <a class="nav-item nav-link px-3" href="{% url 'afficherPresentation' niveau='maths' %}" style="font-size:1.3em;color:var(--couleur_titre);">Calcul<br/>numérique</a>
                 </div>
-                <button class="btn btn-outline-light me-2 fw-bold btn-md" type="button">Connexion</button>
+                <button class="bouton me-2 fw-bold" type="button">Connexion</button>
             </div>
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="mot-clé (en construction)" aria-label="Search">
-                <button class="btn btn-outline-light fw-bold btn-md" type="submit">Recherche</button>
+                <button class="bouton fw-bold" type="submit">Recherche</button>
             </form>
         </div>
     </nav>  
@@ -69,7 +68,7 @@
     <section class="my-5 py-5 px-5 bg-white">
         <div class="container">
             <div class="row">
-            <p class="bi bi-badge-cc"> ToKeTa 2021 Stephane R.</p>
+            <p class="bi bi-badge-cc"> ToKeTa 2020 Stephane R.</p>
             <a class="bi bi-linkedin  col-md-2" href="" target="_blank"> LinkedIn</a>
             <a class="bi bi-facebook  col-md-2" href="" target="_blank"> Facebook</a>
             <a class="bi bi-youtube  col-md-2" href='https://www.youtube.com/channel/UCgCl1cAuhEa5RxCsV87cG4A/featured' target="_blank"> YouTube</a>
