--- a/home/templates/modelePage.html
+++ b/home/templates/modelePage.html
@@ -3,12 +3,6 @@
 
 {% block principal %}
 
-<!-- SCRIPT POUR LES QUESTIONNAIRES UNIQUES DE PARAGRAPHES 
-doit etre lu en haut de page -->
-
-<script src="{% static 'home/quiz/questionnaireUnique.js' %}"></script>
-
-<!-- fin script -->
 
 
 <!-- TITRE -->
@@ -24,7 +18,7 @@ doit etre lu en haut de page -->
 
 <section class="px-5 py-5 bg-white">
     <div class="container">
-        <p>Compétences abordées :</p>
+        <p>Contenu :</p>
         {% block contenu %} {% endblock contenu %}
         <a href='https://www.youtube.com/channel/UCgCl1cAuhEa5RxCsV87cG4A/featured' target='_blank'>
         <img src="{% static 'home/images/general/youtubetoketa.png' %}" alt='youtube' width='15%'' style='margin-top:1%;border-radius:5px;'>
@@ -38,6 +32,8 @@ doit etre lu en haut de page -->
 <section class="px-5 py-5 bg-white">
     <div class="container">
         {% block cours %} {% endblock cours %}
+        <img src="{% static 'home/images/general/toketa.gif' %}" width="300px" class="center">
+
     </div>
 </section>
 
