--- a/home/templates/sources/nsi/internet/competence10.html
+++ b/home/templates/sources/nsi/internet/competence10.html
@@ -3,98 +3,73 @@
 
 {% block contenu %}
 <ul>
-    <li>les moteurs de recherche</li>
-	<li>les méta-moteurs</li>
-	<li>des robots qui parcourent le Web</li>
-	<li>le référencement naturel</li>
-	<li>le deep Web</li>
+    <li>les réseaux centralisés</li>
+    <li>les réseaux peer-to-peer</li>
+    <li>le Bitcoin</li>
+    <li>une fiche mémo sur le peer-to-peer</li>
 </ul>
 {% endblock contenu %}
 
 {% block cours %}
 
-<h3>Introduction</h3>
+<h3>Les réseaux centralisés</h3>
 
-<p>Pour commencer, une question simple, mais pas si simple : </p>
-<div class="exerciceApplication">
-	<p><strong>A vous de jouer : </strong>Google est une société qui développe de multiples applications et 
-		solutions informatiques. Mais lorsqu'on se rend sur le Web pour utiliser Google, s'agit-il d'un moteur de 
-		recherche ou d'un navigateur ? Et qu'en est-il de Chrome ? Faites-vous bien la différence ?</p>
-</div>
+<p>Au niveau des réseaux physiques, on distingue les réseaux centralisés et les réseaux peer-to-peer.</p>
 
-<h3>Les moteurs de recherche</h3>
+<p>Les réseaux centralisés sont composés de plusieurs clients connectés à un serveur central. Dans la pratique, ce système peut s'étendre à plusieurs clients connectés à plusieurs serveurs. Mais l'idée reste la même, les données sont stockées sur le ou les serveurs accessibles par les clients. Dans ce cas, vu que les ressources sont centralisées :
+    <ul>
+        <li>il est facile d'assurer la sécurité du réseau</li>
+        <li>il est facile de le faire évoluer car sa structure est claire</li>
+        <li>l'entretien du réseau est coûteux</li>
+        <li>le réseau est vite saturé</li>
+    </ul>
+</p>
 
-<p>Un moteur de recherche est une application qui permet d'effectuer des recherches sur Internet à partir de mots clés. 
-	Un navigateur facilite l'utilisation du Web et fournit des services pour enregistrer dans les favoris, retrouver l'historique, 
-	télécharger une page, ... Un navigateur utilise bien évidemment le serveur DNS pour traduire les adresses URL en adresses IP, 
-	et le protocole HTTP pour accéder au Web. Rappel, le protocole HTTPS est la version sécurisée du protocole HTTP, utilisée par 
-	exemple lors de transactions sur le Web.</p>
+<h3>Les réseaux peer-to-peer</h3>
 
-	<div class="exerciceApplication">
-		<p><strong>A vous de jouer : </strong>trouvez au moins trois navigateurs de marque différente et trois moteurs de 
-		recherche de marque différente.</p>
-	</div>
+<p>Dans les réseaux peer-to-peer, chaque ordinateur est à la fois client et serveur. Vu que les ressources sont partagées :</p>
+<ul>
+    <li>il est difficile d'assurer la sécurité du réseau vu que les données sont éparpillées</li>
+    <li>l'évolution du réseau peut s'effectuer sans que les ordinateurs connectés en soient informés</li>
+    <li>le coût d'entretien est peu élevé</li>
+    <li>le réseau est moins vite saturé</li> 
+</ul>
+<p>Pour les raisons évoquées ci-dessus, ce type de réseau convient mieux aux sites hébergeant du contenu illégal.</p>
 
-
-<h3>Les méta-moteurs</h3>
-
-<p>Les méta-moteurs sont des logiciels qui utilisent plusieurs moteurs de recherche généralistes pour afficher un classement des informations suite à une requête. Un méta-moteur permet ainsi de gagner du temps lors d'une requête en évitant à l'utilisateur d'effectuer ses recherches auprès de plusieurs moteurs de recherche séparément.</p>
-
-
-<h3>Des robots parcourent le Web</h3>
-
-<p>Des programmes appelés robots parcourent le Web, indexent les pages dans des bases de données à partir des 
-	mots qu'elles contiennent et suivent chaque lien qu'ils rencontrent. Cela permet aux moteurs de recherche 
-	de gagner du temps lors d'une requête. Cela permet également à certaines agences (nationales ou commerciales) 
-	d'effectuer efficacement des recherches sur Internet, en laissant tourner en permanence ces programmes. 
-	Attention donc, il ne s'agit pas de robots tels qu'on peut les imaginer avec une ossature métallique. </p> 
-
-<h3>Le référencement naturel</h3>
-
-<p>	Il est souvent évoqué la neutralité d'Internet comme principe garantissant l'égalité de traitement des informations. En fait cette neutralité s'applique aux FAI (Fournisseurs d'Accès Internet) qui ne doivent pas examiner ou altérer le contenu d'une page ou en limiter l'accès en fonction du profil de ses utilisateurs. Toutefois, cette neutralité ne s'applique plus au niveau des moteurs de recherche, des sites ou encore des réseaux sociaux.</p>
-
-<p>En ce qui concerne les moteurs de recherche, ceux-ci sont affectés à la fois par le référencement naturel, le profil de l'utilisateur qu'ils ont préalablement mémorisés, et les contrats publicitaires qui ont pu être passés.</p>
-
-<p>Le principe du référencement naturel repose sur le fait que plus un site est cité par d'autres sites, plus il est pertinent sur le Web.</p>  
-
-<div class="exerciceType">
-	<p><strong>Exercice type : </strong>calculer le référencement naturel de chacun des sites Web ci-dessous, sachant qu'une flèche partant du site A vers le site B représente un lien présent dans une page du site A, quoi pointe vers le site B.</p>
-<img src="{% static 'home/images/nsi/referencement_sujet.png' %}" alt="référencement naturel" width=35%>
-
-	<p>Solution : <br/>
-		<em>Etape 1 - calculer le point de chacun des liens</em><br/>
-		au départ chaque site possède un score de 1.<br/>
-		Le site A pointe vers 3 sites, donc chacun de ses liens a une valeur de \(\frac{1}{3}\).<br/>
-		Le site B pointe vers 1 seulu site, donc son lien a une valeur de 1.<br/>
-		Le site C pointe vers 2 autres sites, donc chacun de ses liens a une valeur de \(\frac{1}{2}\).<br/>
-		Le site D pointe vers 3 sites, donc chacun de ses liens a une valeur de \(\frac{1}{3}\).<br/>
-	</p>
-
-		<img src="{% static 'home/images/nsi/referencement_correction.png' %}" alt="référencement naturel" width=35%>
-		<p><em>Etape 2 - pour chaque site rajouter à son poids initial de 1 les valeurs des liens dont il est destinataire</em><br/>
-		Le site A obtient un référencement naturel de \(1 + 1 + \frac{1}{2} + \frac{1}{3} = 2,83\).<br/>
-		Le site B obtient un référencement naturel de \(1 + \frac{1}{3} + \frac{1}{3} = 1,67\).<br/>
-		Le site C obtient un référencement naturel de \(1 + \frac{1}{3} + \frac{1}{3} = 1,67\).</br>
-		Le site D obtient un référencement naturel de \(1 + \frac{1}{2} + \frac{1}{3} = 1,83\).
-	<p>
-</div> 
+<p>Mais le réseau peer-to-peer peut également faciliter le calcul partagé, qui consiste à répartir les charges de calcul scientifique sur un grand nombres d'ordinateurs sans utiliser de serveur centralisé.</p>
 
 <div class="exerciceApplication">
-	<p><strong>A vous de jouer : </strong> Calculer le référencement naturel de chacun des sites suivants :</p>
-	<img src="{% static 'home/images/nsi/referencement_exercice.png' %}" alt="référencement naturel" width=35%>
+	<p><strong>A vous de jouer : </strong>Comparez dans un même tableau les caractéristiques des réseaux centralisés 
+        et des réseaux peer-to-peer pour en faire ressortir les avantages et inconvénients.</p>
 </div>
 
-<p>Google propose un module <em>Analytics</em> pour connaître le trafic et les différentes statistiques liées au site Web que vous avez créé. Il est possible d'améliorer le référencement final de votre site, par rapport à son référencement naturel.</p>
+<h3>Le Bitcoin</h3>
+
+<p>De même, le Bitcoin est une monnaie virtuelle et décentralisée qui prend de plus en plus d'importance. D'après le site https://bitcoin.org/fr/, "<em>Bitcoin est une technologie pair à pair fonctionnant sans autorité centrale. La gestion des transactions et la création de bitcoins est prise en charge collectivement par le réseau. Bitcoin est libre et ouvert. Sa conception est publique, personne ne possède ni ne contrôle Bitcoin et tous peuvent s'y joindre</em>".</p>
+
+
+<p>Cette monnaie est donc échangeable sans passer par le serveur centralisé d'une banque, et possède les fonctionnalités suivantes :
+    <ul>
+    <li>permet de payer avec un smartphone simplement, sans inscription, sans numéro de carte bancaire. Il faut afficher le QR-code donné par l'appli Bitcoin et laisser le bénéficiaire le scanner</li>
+    <li>il n'est pas nécessaire d'utiliser le même logiciel. Tous les logiciels qui acceptent le bitcoin sont compatibles et utilisent la même technologie ouverte</li>
+    <li>le bitcoin est utilisable partout et en tout temps</li>
+    <li>les transferts d'argent s'effectuent sans délai, et à moindre coût</li>
+    <li>il est possible de payer sans révéler son identité</li>
+    </ul>
+</p>
 
 <div class="exerciceApplication">
-	<p><strong>A vous de jouer : </strong>comment améliorer le référencement de votre site Web ?</p>
+	<p><strong>A vous de jouer : </strong>en vous aidant d'Internet, recherchez puis résumez comment sont effectués les achats
+     ou transferts de Bitcoin.</p>
 </div>
 
-<h3>Le Deep Web</h3>
+<!-- FICHE MEMO -->
+<h3>Fiche mémo</h3>
 
-<p>Le moteur de rechercher Google fournit un classement par pages de sites référencés, suite à la requête d'un utilisateur. Toutefois, toutes les pages Web ne sont pas référencées par les moteurs de recherche traditionnels comme Google, Yahoo, DuckDuckGo,... car elles en ont été volontairement exclues lors de leur création. Ces pages appartiennent au Deep Web, leurs interfaces graphiques sont souvent rudimentaires, proches de celles d'un moteur de recherche. Elles peuvent par exemple contenir les ressources volumineuses d'un serveur, des bases de données privées, des réseaux internes d'entreprises Intranet, et sont accessibles par mot de passe, parfois même payantes. Elles représentent la plus grande partie du Web (90 à 96%). Ce que nous consultons tous les jours s'appelle en fait le Web visible, et ne constitue donc qu'une petite partie des ressources du Web.</p>
-
-<p>Le Dark Web appartient au Deep Web, dont il représente une faible proportion. D'après l'entreprise de sécurité informatique <em>Kapersky</em>, "la réputation du Dark Web a souvent été liée à des intentions criminelles ou à des contenus illégaux et à des sites marchands où les utilisateurs peuvent acheter des biens ou des services illicites". Ainsi, le Dark Web fait référence à des sites non indexés, auxquels on ne peut pas accéder avec des navigateurs grand public. Il nécessite l'utilisation d'un VPN et d'un navigateur spécialisé comme Tor, et son accès n'est pas recommandé au regard des risques potentiels encourus. Toujours d'après l'entreprise <em>Kapersky</em> "les utilisateurs peuvent emprunter des chemins assez sinueux et se retrouver sur un site de piratage ou un forum extrémiste sur le plan politique, ou encore tomber sur des contenus d'une violence inquiétante."</p>
+<div class="row">
+    <div class="col-12">
+        <iframe src="{% static 'home/documents/memo_p2p.pdf' %}" height='1200px' width='1100px' type='application/pdf'></iframe>
+    </div>
+</div>
 
 {% endblock cours %}
-    
