--- a/home/templates/sources/nsi/internet/competence12.html
+++ b/home/templates/sources/nsi/internet/competence12.html
@@ -3,12 +3,12 @@
 
 {% block contenu %}
 <ul>
-    <li>le principe des réseaux sociaux</li>
-    <li>les traces numériques</li>
-    <li>comment les réseaux sociaux se rémunèrent</li>
-    <li>une bulle informationnelle</li>
-    <li>la dérive des fake news</li>
-    <li>le harcèlement lié aux réseaux sociaux</li>
+    <li>la cybercriminalité peut prendre différentes formes</li>
+	<li>le phishing</li>
+	<li>les virus</li>
+	<li>le déni de service</li>
+	<li>la publicité malveillante</li>
+	<li>l'exploitation de vulnérabilités</li>
 </ul>
 {% endblock contenu %}
 
@@ -16,131 +16,169 @@
 
 <h3>Introduction</h3>
 
-<p>La vidéo suivante publiée par <em>Absolute Motivation</em> sur YouTube met en avant les dangers des <em>social medias</em> :
-<br/><a href="https://www.youtube.com/watch?v=PmEDAzqswh8" target="_blank">&#127911; video Social Media - Absolute Motivation</a></p>
-
-<!-- QUELS RESEAUX SOCIAUX -->
-<h3>Le principe des réseaux sociaux</h3>
-
-<p>La vidéo suivante publiée par <em>Lumni</em> sur YouTube met en avant le temps passé quotidiennement sur les réseaux sociaux :
-<br/><a href="https://youtu.be/ltTHAE_C-XI" target="_blank">&#127911; video Réseaux sociaux tous accros - Lumni</a></p>
-    
-
-<p>Les réseaux sociaux se construisent à partir de communautés qui partagent des intérêts communs, et qui sont 
-    reliées entre elles par des liens faibles. Ces liens faibles permettent donc de rassembler dans un même réseau 
-    des sous-groupes d'individus qui n'ont pas forcément beaucoup de points communs. Par exemple si vous avez changé 
-    d'école, votre réseau Instagram pourrait être composé de vos amis rencontrés dans votre ancienne école, mais également
-     de vos amis de classe actuels. Ces liens faibles semblent anodins alors qu'ils sont en réalité 
-    particulièrement importants, vu qu'ils permettent de relier des individus que rien ne rapproche a priori. 
-    Ils facilitent ainsi la circulation de l'information à grande échelle.</p>
-
 <div class="exerciceApplication">
-<p><strong>A vous de jouer : </strong><br/>1) Enoncez les réseaux sociaux que vous connaissez, en indiquant ce qui caractérise chacun d'entre eux.<br/>
-2) A l'aide d'une recherche sur Internet, trouvez le nombre d'abonnés de chacun de ces réseaux sociaux pour l'année
- dernière. Quel est le réseau le plus influent parmi ceux qui vous utilisez ?</p>
+	<p><strong>A vous de jouer : </strong>la plupart des risques encourus sur Internet sont liés aux utilisateurs. 
+		expliquez dans le détail comment il est possible de se faire piéger en se rendant sur un site, en répondant 
+	à un email, en consultant son smartphone, ... Quels sont donc les comportements à risque à éviter ?</p>
 </div>
 
-<h4>Avis des élèves</h4>
-<p>"C'est un moyen d'avoir une vie sociale plus active et de pouvoir communiquer plus directement."</p>
-<p>"C'est un moyen plus dangereux de communiquer, vu que c'est à travers un écran et qu'on ne sait pas vraiment avec 
-    qui on parle.</p>
+
+<!-- LA CYBERCRIMINALITE PEUT PRENDRE DIFFERENTES FORMES -->
+<h3>La cybercriminalité peut prendre différentes formes</h3>
+
+<p>Les principales menaces en cybercriminalité sont les suivantes :</p>
+	<ul>
+		<li>vol d’information, et parfois usurpation d’identité</li>
+		<li>destruction des données ou des ordinateurs, smartphones</li>
+		<li>défiguration de site Web (defacement)</li>
+		<li>modification d’information par un utilisateur non autorisé</li>
+		<li>déni de service DoS</li>
+		<li>publicité indésirable</li>
+		<li>escroquerie</li>
+	</ul>
+
+<p>Le mot malware est un terme général qui fait référence à un logiciel malveillant.</p>
 
 
-<!-- LES TRACES NUMERIQUES -->
-<h3>Les traces numériques</h3>
 
-<p>Dès qu'un utilisateur consulte le Web, il laisse des traces numériques involontaires (dans l'historique du moteur de recherche, dans 
-    les cookies des sites, ...), puis des traces numériques volontaires lorsqu'il crée un compte en 
-    s'identifiant et en répondant à diverses questions. Le regroupement de ces traces numériques, d'un réseau social à 
-un autre, construit l'identité numérique de chaque utilisateur qui est stockée et mise à jour en permanence dans des bases 
-de données. Les algorithmes des réseaux sociaux permettent d'affiner la personnalité numérique des utilisateurs et de 
-proposer en permanence des invitations ciblées ou du contenu approprié sur le feed personnel d'un utilisateur. </p>
+<h3>Le phishing</h3>
 
-<div class="exerciceApplication">
-    <p><strong>A vous de jouer : </strong>comment l'utilisateur peut-il assurer sa confidentialité sur le Web ?</p>
-    </div>
+<p>Il consiste à se faire passer pour une personne, un organisme ou une entreprise de confiance afin de 
+	demander des informations confidentielles à un victime. Celle-ci est amenée à cliquer sur un lien envoyé 
+	par email lui donnant accès à un site web ressemblant au site officiel, faisant ainsi croire à 
+	l’utilisateur qu’il navigue sur un site de confiance. Lorsque l'utilisateur tape ses informations 
+	confidentielles, celles-ci sont dérobées à son insu.</p>
 
-<!-- COMMENT LES RESEAUX SOCIAUX SE REMUNERENT ILS -->
-<h3>Comment les réseaux sociaux se rémunèrent</h3>
-
-<p>La plupart des réseaux sociaux sont gratuits. Ils ne trouvent donc pas dans l'abonnement leur principale source de revenue. En fait, les réseaux sociaux collectent et stockent une importante quantité de données personnelles, qu'ils revendent ensuite à des fins commerciales. Pour cela, les réseaux sociaux ont besoin de maintenir le plus longtemps possible les utilisateurs sur leurs plateformes, et utilisent des coockies pour enregistrer l'information.</p>
-
-<p>Chaque saisie clavier est enregistrée, chaque clic pour choisir une image, une vidéo, un lien est analysé par intelligence artificielle, chaque localisation géographique est conservée. Chaque proposition faite par un réseau social, qu'elle soit rejetée ou acceptée par l'utilisateur est interprétée pour imaginer les habitudes et les centres d'intérêt de cet utilisateur. Par la suite, de la publicité ciblée en fonction des goûts de l'utilisateur mais également de sa position géographique lui sera proposée. On parle de tracking publicitaire qui consiste à combiner les données marketing personnelles avec les données géolocalisées. Cette publicité, bien plus efficace qu'une publicité grand public, rapporte énormément d'argent aux réseaux sociaux.</p>
-
-<p>Le système des Adwords rapporte de l'argent à certains réseaux sociaux. Le placement publicitaire en haut d'une page de recherche pour contrebalancer le référencement naturel est payant. En outre, à chaque fois qu'un utilisateur clique sur un lien publicitaire en haut d'une page, affecté d'un préfixe <em>ad</em>, cela rapporte également de l'argent.</p>
-
-<p>Le financement des réseaux sociaux est donc basé sur techniques commerciales :
+<p><em>Précautions à prendre : </em></p>
 <ul>
-    <li>collecte massive de données qui sont revendues</li>
-    <li>publicité ciblée rémunératrice</li>
-    <li>Adwords payants</li>
+	<li>vérifier l'adresse d'origine de l'email, il est facile de confondre tresor-public@administration.fr et
+		tresor-public@adrninistration.fr</li>
+	<li>ne pas cliquer sur des liens dont la provenance n'est pas certifiée,</li>
+	<li>le cas échéant vérifier l'adresse du site sur lequel le lien nous a renvoyé,</li>
+	<li>vérifier l'orthogaphe dans le texte de l'email, il est fréquent que les emails frauduleux comportent 
+		de nombreuses fautes d'orthographes.</li>
 </ul>
-</p> 
-
-<p>Le trailer suivant introduit le documentaire <em>The Social Dilemma</em> réalisé par Netflix :
-    <a href="https://youtu.be/uaaC57tcci0" target="_blank">&#127911; video trailer Social Dilemma - Netflix</a>
- qui présente l'utilisation des données enregistrées par les réseaux sociaux.</p>
-
- <div class="exerciceApplication">
-    <p><strong>A vous de jouer : </strong>expliquez en détail les principales motivations qui poussent certaines entreprises et 
-        leurs sites Web à traquer nos données sur Internet.</p>
-    </div>
-
-    <p>"If you're not paying for something, you're not the customer, you're the product being sold" <em>Andrew Lewis</em></p>
 
 
+<h3>Les virus</h3>
 
-<!-- BULLE INFORMATIONNELLE -->
-<h3>Une bulle informationnelle</h3>    
+<p>Il s'agit de logiciels malveillants installés sur l'ordinateur ou le smartphone d'une victime, le serveur 
+	d'un site Web ou d'une entreprise pour voler des informations, détruire le fonctionnement d'une machine 
+	ou d'un serveur et fournir un prétexte pour une rançon.</p>
+<p>Les différentes contaminations possibles sont les suivantes :</p>
+<ul>
+<li>par les supports amovibles (clés USB)</li>
+<li>par les pièces jointes des emails</li>
+<li>par les fichiers exécutables (extensions .EXE sur Windows, .PY s'il s'agit d'un script Python)</li>
+<li>par les fichiers multimedia .MP3, .MP4, .AVI, …</li>
+</ul>
 
-<p>Les algorithmes apprennent les préférences des utilisateurs en analysant leurs habitudes. Par la suite, les réseaux sociaux 
-    personnalisent l'information qu'ils proposent pour satisfaire ses utilisateurs. De ce fait, chaque utilisateur
-     ne reçoit qu'une information adaptée à ses préférences et finit par se persuader que la plupart des 
-     internautes partagent ses opinions. Ainsi un utilisateur trouve ce qu'il cherche et se voit proposer 
-     principalement les sujets qui l'intéressent et qui le confortent dans ses opinions. Les réseaux sociaux, de 
-     par leur nature, génèrent une désinformation rassurante pour l'utilisateur. Cette personnalisation de la désinformation 
-    s'appelle une bulle informationnelle.</p>
+<p><em>Précautions à prendre : </em></p>
+<ul>
+	<li>ne pas télécharger des applications dont on ne connaît pas la réputation,</li>
+	<li>télécharger des applications à partir de la page officielle de la société qui la développe,</li>
+	<li>installer un antivirus sur son smartphone, sa tablette et son ordinateur,</li>
+	<li>"les Mac et les Iphones sont protégés naturellement des virus" est une légende urbaine,</li>
+	<li>scanner les supports amovibles à l'aide d'un anti-virus avant de les utiliser.</li>
+</ul>
+
+<h4>Les worms</h4>
+
+<p>Il s'agit d'un type d'attaque particulier qui utilise un carnet d'adresse pour se propager. 
+	Lorsque le hacker a obtenu l'accès au carnet d'adresse d'un compte WhatsApp, Google, Outlook, ..., 
+	il infecte les autres membres du réseau, sans se dévoiler ou en se faisant passer pour un ami au sein 
+	du réseau.</p>
+
+<h4>Les trojans</h4>
+
+<p>Il s'agit d'un certain type de virus qui s'insèrent dans une machine puis donnent accès aux ressources 
+	de cette machine à l'insu de son propriétaire.</p>
+
+<h4>Les spywares</h4>
+
+<p>Il s'agit d'un terme général relatif à un malware qui espionne les actions d'un utilisateur sur son 
+	ordinateur ou son smartphone, pour récupèrer des informations à partir d'une machine infectée. Ce vol 
+d'information peut ensuite être utilisé pour usurper l'identité de quelqu'un afin de créer des abonnements 
+ou de faire des achats au nom d'un autre, d'ouvrir des prêts bancaires. On parle dans ce cas de spoofing.</p>
+
+<h4>Les botnets</h4>
+
+<p>Il s'agit d'un ensemble de robots informatiques qui se déploient sur de grandes quantités de machines 
+	pour les utiliser comme relais d'attaques ou de spams. On parle également de réseaux zombies.</p>
+	
+
+<h3>Le déni de service</h3>
+
+<p>Il consiste à paralyser un réseau, un serveur ou un site Web pour que les utilisateurs ne puissent plus
+	en obtenir l'accès. D'innombrables requêtes sont transmises en même temps à un serveur pour le saturer. 
+	Le déni de service distribué utilise plusieurs machines relais à partir d'une seule machine pour saturer 
+	un système.</p>
+
+<p>Il arrive que parfois le déni de service n'entraîne qu'un ralentissement du système. On parle dans ce 
+	cas de downtime.</p>
+
+<p>Le déni de service s'accompagne généralement d'une demande de rançon.</p>
+
+
+
+
+<h3>La publicité malveillante</h3>
+
+<h4>Les Spams</h4>
+
+<p>Il s'agit d'une technique de marketing consistant à diffuser massivement par email de la publicité non sollicitée par les utilisateurs.</p>
+
+
+<h4>Les adware</h4>
+
+<p>Il s'agit d'un logiciel qui présente des publicités non sollicités, souvent sous forme de fenêtre pop-up.</p>
+
+<p><em>Précautions à prendre : </em></p>
+
+<ul><li>utiliser un ad-blocker</li></ul>
+
+<h4>Les browser-hijackers</h4>
+
+<p>Il s’agit de modifications du navigateur sans la permission de l’utilisateur pour afficher des publicités
+	 ou enregistrer l’activité de l’utilisateur. Un browser-hijacker peut par exemple être utilisé pour 
+	 générer de fausses alertes de sécurité afin d'inciter à acheter un anti-virus.</p>
+
+
+<h3>Le Scam</h3>
+
+<p>Il s'agit d'une forme d'escroquerie qui utilise les technologies modernes pour exploiter 
+	la naïveté des utilisateurs afin qu'ils fournissent de leur plein gré des données confidentielles ou 
+	de l'argent. Le hacker peut se faire passer pour un agent de l'état, un membre de l'organisation ou 
+l'entreprise pour laquelle il travail, un membre de sa famille, une personne en détresse, ...</p>
+
+
+
+
+
+
+<h3>Exploitation de vulnérabilités</h3>
+
+<p>L’exploitation de vulnérabilité consiste à abuser de failles connues dans les navigateurs, les applications web, les réseaux, les systèmes d'exploitation et les applications de la machine.</p>
+
+<p>L'une des techniques d'exploitation de vulnérabilité les plus utilisées sur le Web est l'injection SQL, qui consiste à insérer dans un formulaire non protégé du code SQL capable d'altérer ou de détruire la base de données sur laquelle évolue le site Web attaqué.</p> 
+
+<p>Une autre technique de hacking sur le Web très utilisée est le Cross Site Scripting XSS, qui injecte du code côté client sur les pages Web visitées par d'autres utilisateurs, et permet de se connecter en tant qu'un autre utilisateur sans connaître le mot de passe de cet utilisateur.</p>
+
+<p>Toutes les vulnérabilités recensées sont enregistrées dans le répertoire du CVE afin d'en conserver l'historique et le mode opératoire. Tout individu peut contribuer à cette base de données en publiant une nouvelle vulnérabilité.</p>
+
+<h4>Exemple d'analyse de vulnérabilié</h4>
+
+<div class="row">
+    <div class="col-12">
+		<iframe src="{% static 'home/documents/Analyse_cross_site_scripting.pdf' %}" height='1200px' width='1100px' type='application/pdf'></iframe>
+	</div>
+</div>
+
+<h3>Se tester</h3>
 
 <div class="exerciceApplication">
-    <p><strong>A vous de jouer : </strong><br/>
-        1) En effectuant une recherche sur Internet, indiquez ce que rapporte chaque année à
-         Google la vente de nos données personnelles recueillies en utilisant ce moteur de recherche.<br/>
-        2) Quelles sont vos attentes lorsque vous utilisez des réseaux sociaux ?<br/>
-        3) Quels avantages peut-on trouver à ce concept de bulle informationnelle ?<br/>
-        4) Pour quelle raison les influenceurs ont-ils autant d'importance sur les réseaux sociaux ?</p>
+	<p><strong>A vous de jouer : </strong>testez vos connaissances en matière de sécurité avec le quizz de Swisscom : 
+	<a href='https://www.swisscom.ch/fr/b2bmag/securite/quiz-securite-it-pme/' target="_blank">https://www.swisscom.ch/fr/b2bmag/securite/quiz-securite-it-pme/</a></p>
 </div>
-
-
-    <!-- LA DERIVE DES FAKE NEWS -->
-<h3>La dérive des fake news</h3>
-
-<p>De nos jours, les influenceurs, susceptibles d'influencer le comportement et l'opinion d'un nombre important de consommateurs, obtiennent de véritables marchés commerciaux avec les entreprises. Ils sont également rémunérés par les réseaux sociaux en fonction du nombre de leurs abonnés.</p>
-
-<p>Malheureusement, pour obtenir une audience de plusieurs millions, certains n'hésitent pas à propager des images choc et de l'information mensongère. La dérive des fake news est largement critiquée par la télévision, qui n'est pas non plus exempte de tout reproche à cet égard.
-    On estime qu'une fake news se propage en moyenne 6 fois plus vite qu'une information confirmée.</p>
-
-
-
- <p>Le trailer suivant introduit le documentaire <em>The Great Hack</em> réalisé par Netflix :
-    <a href="https://youtu.be/iX8GxLP1FHo" target="_blank">&#127911; video trailer Great Hack - Netflix</a>
- qui présente comment l'information peut être transformée à des fins commerciales ou politiques.</p>
- 
- <div class="exerciceApplication">
-    <p><strong>A vous de jouer : </strong>quelle technique utilisez-vous pour déceler un fake news ?</p>
-</div>
-    
-<h3>Le harcèlement lié aux réseaux sociaux</h3>
-
-<p>L'article 222-33-2-2 du code pénal définit le harcèlement et les peines encourues :</p>
-<p>"Le fait de harceler une personne par des propos ou comportements répétés ayant pour objet ou pour effet une 
-    dégradation de ses conditions de vie se traduisant par une altération de sa santé physique ou mentale est puni 
-    d'un an d'emprisonnement et de 15 000 € d'amende lorsque ces faits ont causé une incapacité totale de travail 
-    inférieure ou égale à huit jours ou n'ont entraîné aucune incapacité de travail."</p>
-    
-    <div class="exerciceApplication">
-        <p><strong>A vous de jouer : </strong><br/>
-            1) Quels sont les éléments constitutifs de l'infraction qualifiée de harcèlement ?<br/>
-            2) Quelle est la différence entre le code pénal et le code de procédure pénale ?</p>
-        </div>
 
 {% endblock cours %}
