--- a/home/templates/sources/python/debuter/competence2.html
+++ b/home/templates/sources/python/debuter/competence2.html
@@ -3,8 +3,6 @@
 
 {% block contenu %} 
 <ul>
-    <li><a href="#demander">demander une saisie clavier</a></li>
-    <li><a href="#saisie">quel est le type par défaut saisi au clavier ?</a></li>
     <li><a href="#texte">un string est composé de caractères</a></li>
     <li><a href="#concatenation">comprendre la concaténation</a></li>
     <li><a href="#transformer">des méthodes pour transformer les chaînes</a></li>
@@ -14,173 +12,105 @@
 
 {% block cours %}
 
-<p>Il est important de pouvoir communiquer avec l'ordinateur, pour lire des résultats ou donner des informations au programme.
-    Par exemple lorsque vous jouez à votre jeu préféré sur votre smartphone, vous effectuez cliquez sur votre écran pour indiquer 
-    au programme vos choix, vous saisissez également votre identifiant au clavier, puis vous observez à l'écran les progrès de 
-    votre personnage.</p>
+
+<!-- A PLACER EN DEBUT DE FICHIER -->
+<!-- script for pyodide python sandbox -->
+<script src="https://cdn.jsdelivr.net/pyodide/v0.24.1/full/pyodide.js"></script>
+<!-- import codemirror stylings -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.63.3/codemirror.min.css" />
+<!-- install codemirror.js version /5.63.3 from cdn -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.63.3/codemirror.min.js"
+integrity="sha512-XMlgZzPyVXf1I/wbGnofk1Hfdx+zAWyZjh6c21yGo/k1zNC4Ve6xcQnTDTCHrjFGsOrVicJsBURLYktVEu/8vQ=="
+crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!-- install codemirror python language support -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.63.3/mode/python/python.min.js"
+integrity="sha512-/mavDpedrvPG/0Grj2Ughxte/fsm42ZmZWWpHz1jCbzd5ECv8CB7PomGtw0NAnhHmE/lkDFkRMupjoohbKNA1Q=="
+crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!-- import codemirror dracula theme styles from cdn -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.63.3/theme/dracula.css" />
+</head>  
 
 
-<!-- DEMANDER UNE SAISIE CLAVIER -->
-
-<p class="invisible" id="demander">ancre</p>
-
-<h3>Demander une saisie clavier</h3>
-
-<p>Afin que le programme puisse tenir compte des données de l'utilisateur, il est nécessaire de pouvoir récupérer ce que celui-ci tape au clavier. Une question posée à l'utilisateur et qui appelle une réponse de sa part, doit être insérée dans une instruction <strong>input</strong>. Il est inutile dans ce cas d'utiliser l'affichage de la question avec <strong>print</strong>. Ainsi, le code suivant affiche la question <em>Comment vous appelez-vous  ?</em> et attend une réponse : </p>
-
-    <pre><code class="language-python">input("Comment vous appelez-vous ?")</code></pre>
-
-<p>L'interpréteur Python est maintenant en pause jusqu'à ce que l'utilisateur saisisse au clavier sa réponse puis valide avec la touche <em>Entrée</em>.</p>
-
-<p>Attention, cette réponse est perdue si elle n'est pas affectée à une variable. Ainsi, le code ci-dessus doit être modifié de la façon suivante pour être utile :</p>
-
-<pre><code class="language-python">nom = input("Comment vous appelez-vous ?")</code></pre>
-
-<p>Maintenant seulement, la valeur saisie au clavier par l'utilisateur sera réutilisable lorsqu'on appelle la variable <strong>nom</strong>, commme par exemple avec le code ci-dessous :</p>
-
-<pre><code class="language-python">print(nom)</code></pre>
-
-<div class="exerciceApplication">
-<p><strong>A toi de jouer :</strong> demande à l'utilisateur son âge puis affichez la valeur saisie en utilisant une variable <strong>age</strong>.</p>
-    <div>
-        <p><button class='bouton' type="submit" onclick="affichageConditionnel(this,'solution1');"> Voir la solution </button></p>
-    </div>
-
-    <div id="solution1" style="display:none;">
-        <pre><code class="language-python">age = input("quel est votre âge ?")
-print(age)</code></pre>
-</div>
-</div>
-
-<iframe src="https://trinket.io/embed/python/14ddd142a7" width="100%" height="230" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+<style>
+  /* set codemirror ide height to 100% of the textarea */
+  .CodeMirror {
+    height: 150px;
+    overflow: hidden;
+  }
+</style>
 
 
-<!-- QESTIONNAIRE -->
-<h4>As-tu bien compris ?</h4>
-
-{% include '../../../questionnaireUnique.html' with nmr='1' %}
-
+<!-- Common function to initialize a sandbox -->
 <script>
-var questionsData1 = 
-    {
-        question: "Pour récupérer le pseudo d'un utilisateur, il faut exécuter ...",
-        options:['pseudo = input("quel est ton pseudo ?")', 'input("quel est ton pseudo ?")', 'pseudo = print("quel est ton pseudo ?")'],
-        correctIndex: 0,
-        commentaire: "Il faut stocker la valeur saisie par une instruction input dans une variable."
-    };
-questionnaireUnique(1, questionsData1);
-</script>
+    const sandboxes = {};
+  
+    function initializeSandbox(sandboxId) {
+      const outputElement = document.getElementById(`output${sandboxId}`);
+      const codeElement = document.getElementById(`code${sandboxId}`);
+  
+      const editor = CodeMirror.fromTextArea(codeElement, {
+        mode: {
+          name: "python",
+          version: 3,
+          singleLineStringErrors: false,
+        },
+        theme: "dracula",
+        lineNumbers: true,
+        indentUnit: 4,
+        matchBrackets: true,
+      });
+  
+      editor.setValue("# type your code here");
+      outputElement.value = "Initializing...\n";
+  
+      const sandbox = {
+        pyodide: null,
+        editor,
+        outputElement,
+      };
+  
+      sandboxes[sandboxId] = sandbox;
+  
+      async function main() {
+        sandbox.pyodide = await loadPyodide({
+          indexURL: "https://cdn.jsdelivr.net/pyodide/v0.24.1/full/",
+        });
+  
+        sandbox.outputElement.value = sandbox.pyodide.runPython(`
+          import sys
+          sys.version
+        `);
+  
+        sandbox.outputElement.value += "\n>>>\n";
+      }
+  
+      main();
+    }
+  
+    function executePython(sandboxId) {
+      const sandbox = sandboxes[sandboxId];
+  
+      try {
+        sandbox.pyodide.runPython(`
+          import io
+          sys.stdout = io.StringIO()
+        `);
+  
+        const result = sandbox.pyodide.runPython(sandbox.editor.getValue());
+        const stdout = sandbox.pyodide.runPython("sys.stdout.getvalue()");
+        sandbox.outputElement.value += stdout + "\n";
+      } catch (err) {
+        sandbox.outputElement.value += "Error: " + err + "\n";
+      }
+    }
+  
+    function clearHistory(sandboxId) {
+      const sandbox = sandboxes[sandboxId];
+      sandbox.outputElement.value = "";
+      console.log(sandboxId);
+    }
+  </script>
 
-
-<!-- LE TYPE PAR DEFAUT SAISI AU CLAVIER -->
-<p class="my-5 invisible" id="saisie">ancre</p>
-
-<h3>Quel est le type par défaut saisi au clavier ?</h3>
-
-<p>Tout ce que saisit l'utilisateur au clavier est enregistré à l'aide de l'instruction <strong>input</strong> en tant que chaîne de caractères (texte), même un nombre. Essayez pour vous en convaincre le script suivant :</p>
-
-<pre><code class="language-python">age = input("quel est ton âge ? ")
-print(type(age))</code></pre>
-
-<p>Dans le script ci-dessus la variable <strong>age</strong> est de type <em>class 'str'</em>, c'est à dire chaîne de caractères. L'ordinateur considère
-que le nombre saisi est en fait du texte.</p>
-
-<p>Mais alors comment faire des calculs avec du texte ? &#128531;</p>
-
-<p>Afin de pouvoir faire subir des opérations à une variable, il faut que celle-ci soit un nombre,
-    donc principalement de type <strong>int</strong> (entier) ou de type <strong>float</strong> (réel).
-    Or, lorsqu'un utilisateur saisit un nombre au clavier, celui-ci est conservé en tant que <strong>str</strong> (chaîne de caractères).
-    Il faut donc auparavant le transformer en nombre pour pouvoir l'utiliser. On parle de caster
-    une variable pour dire qu'on lui change de type. Pour cela, il suffit d'utiliser devant l'instruction <strong>input</strong>,
-l'instruction <strong>int()</strong> ou <strong>float()</strong>, comme dans le code suivant :</p>
-
-<pre><code class="language-python">age = int(input("quel est ton âge ? "))
-print(type(age))</code></pre>
-
-<p>Attention toutefois, on ne peut transformer une chaîne de caractères en nombres que si celle-ci est composée exclusivement de nombres. 
-    Ainsi, l'instruction <strong>int("bonjour")</strong> entraînera une erreur et ne sera pas transformé en entier. De même, 
-    l'instruction <strong>int("12Hervé")</strong> entraînera une erreur et ne sera pas transformé en entier.</p>
-
-<div class=fieldsetDefinition>
-<h4>A RETENIR ...</h4> 
-<p>"2" est une chaîne de caractères composée du symbole <em>deux</em> qu'on ne peut pas soustraire, ou additionner, ... En revanche 2 est un 
-    nombre auquel on peut faire subir des opérations. Pour s'en convaincre, essayez l'instruction suivante.</p>
-
-<pre><code class="language-python">print("2"+"1") # affiche 21
-print(2+1) # affiche 3</code></pre>
-</div>
-
-<div class="exerciceApplication">
-    <p><strong>A toi de jouer : </strong>imaginons que le programme souhaite connaître l'âge de l'utilisateur puis que plus tard, il souhaite lui rajouter un an (lors de son anniversaire).
-        Ecrire le programme qui effectue ces instructions.</p>
-
-    <div>
-        <p><button class='bouton' type="submit" onclick="affichageConditionnel(this,'solution3');"> Voir la solution </button></p>
-    </div>
-
-    <div id="solution3" style="display:none;">
-
-        <p>L'instruction suivante ne renverrai aucune erreur
-            mais conduirait à un résultat absurde :</p>
-
-        <pre><code class="language-python">age = input("quel est votre âge ?")
-age = age + 1
-print(age)</code></pre>
-
-        <p>qui affiche si l'utilisateur saisit la valeur 18 en réponse</p>
-
-        <pre><code class="language-python">>>> 181</code></pre>
-
-        <p>Dans ce cas, la valeur 18 saisie possède par défaut le type str et lorsqu'on lui rajoute 1,
-            ce dernier se place à la suite de 18 et n'effectue aucun calcul. On parle de concaténation.</p>
-
-        <p>Pour corriger ce problème et effectuer une addition, il faut utiliser le code suivant :</p>
-
-        <pre><code class="language-python">age = int(input("quel est votre âge ?"))
-age = age + 1
-print(age)</code></pre>
-
-        <p>qui fournit le résultat escompté, à savoir :</p>
-
-        <pre><code class="language-python">>>> 19</code></pre>
-    </div>
-</div>
-
-<iframe src="https://trinket.io/embed/python/14ddd142a7" width="100%" height="230" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
-
-
-<p>Il existe en Python un moyen de vérifier qu'une valeur saisie peut être transformée en entier, à l'aide de
-l'instruction <strong>isnumeric()</strong>.</p>
-
-<div class="exerciceApplication">
-    <p><strong>A toi de jouer : </strong>essaie le code ci-dessous pour bien comprendre ce que teste l'instruction <strong>isnumeric()</strong>.</p>
-
-<pre><code class="language-python">print("22".isnumeric()) # affiche True
-print("bonjour".isnumeric()) # affiche False, bonjour est une chaîne de caractères
-print("2.45".isnumeric()) # affiche False, 2.45 est un nombre réel
-print("-3".isnumeric()) # affiche False, -3 est un nombre entier négatif</code></pre>
-
-</div>
-
-<iframe src="https://trinket.io/embed/python/14ddd142a7" width="100%" height="230" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
-
-
-<!-- QESTIONNAIRE -->
-
-<h4>As-tu bien compris ?</h4>
-
-{% include '../../../questionnaireUnique.html' with nmr='2' %}
-
-<script>
-var questionsData2 = 
-    {
-        question: '<p>Dans le code suivant : </p><pre><code class="language-python">poids = input("combien pèse le vélo ?")</code></pre><p>quel est le type de la variable poids ...</p>',
-        options:["int car le poids est un nombre entier", "float car il s'agit en fait d'un nombre à virgule", "str car il est stocké ainsi"],
-        correctIndex: 2,
-        commentaire: "Toute saisie clavier est stockée par défaut en tant que str."
-    };
-questionnaireUnique(2, questionsData2);
-</script>
 
 
 <!-- TEXTE COMPOSE DE CARACTERES -->
@@ -255,9 +185,14 @@ print(a + b) # addition de nombres, affiche 27
 a = "12"
 b = "15"
 print(a + b) # concaténation de caractères, affiche "1215"</code></pre>
-</div>
 
-<iframe src="https://trinket.io/embed/python/14ddd142a7" width="100%" height="230" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+
+<!-- SANDBOX 1 -->
+{% include '../../../sandbox.html' with nmr='1' %}
+</div>
+<script>
+    initializeSandbox(1);
+</script>
 
 
 <!-- QESTIONNAIRE -->
@@ -315,17 +250,23 @@ questionnaireUnique(3, questionsData3);
 
     <div id="solution5" style="display:none;">
         <p>Solution :</p>
-        <pre><code class="language-python">print(maChaine.replace('a', 'o'))
+        <pre><code class="language-python">maChaine = "la neige se transforme en névé l'été"
+print(maChaine.replace('a', 'o'))
 print(maChaine.upper())
 print(maChaine.capitalize())
 print(maChaine.count('e'))
 print(maChaine.find('s'))
 print(len(maChaine))</code></pre>
     </div>
+
+
+
+<!-- SANDBOX 2 -->
+{% include '../../../sandbox.html' with nmr='2' %}
 </div>
-
-<iframe src="https://trinket.io/embed/python/14ddd142a7" width="100%" height="230" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
-
+<script>
+    initializeSandbox(2);
+</script>
 
 <p>Les méthodes ci-dessus ne modifient pas les chaînes de caractères, mais construisent une nouvelle 
     chaîne à partir de la chaîne de départ. Ainsi, </p>
@@ -372,9 +313,14 @@ print(maChaine[3:])  # affiche de l'indice 3 à la fin, "neige fond en été"
 print(maChaine[:4])  # affiche du début à l'indice 3, "la n"
 print(maChaine[-1])  # affiche "é"
 print(maChaine[-5])  # affiche "n"</code></pre>
-</div>
 
-<iframe src="https://trinket.io/embed/python/14ddd142a7" width="100%" height="230" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+
+<!-- SANDBOX 3 -->
+{% include '../../../sandbox.html' with nmr='3' %}
+</div>
+<script>
+    initializeSandbox(3);
+</script>
 
 <p>On est maintenant capable d'extraire une partie d'une chaîne, de la concaténer avec une autre partie
     de cette chaîne. On devrait donc pouvoir inverser les lettres d'un mot à l'aide d'un programme.</p>
@@ -383,89 +329,6 @@ print(maChaine[-5])  # affiche "n"</code></pre>
 <!-- ENTRAINEMENT -->
 <h3>Entraînement</h3>
 
-<div class="exerciceApplication">
-    <p><strong>Exercice 1 : </strong>écrire un programme qui demande à l'utilisateur une 
-    température en degrés Celsius (indication pensez à <strong>input</strong>) et la convertit en Fahrenheit avant de l'afficher, connaissant la formule F = 1.8 * C + 32 
-où F représente la température en Fahrenheit et C la température en Celsius.</p>
-</div>
-
-<p class="separateur"></p>
-
-<div class="exerciceApplication">
-    <p><strong>Exercice 2 : </strong>on reprend la formule ci-dessus, mais cette fois, on veut écrire un 
-        programme qui demande à l'utilisateur une température en Fahrenheit et la convertit en degrés Celsius 
-        avant de l'afficher.</p>
-</div>
-
-<p class="separateur"></p>
-
-<div class="exerciceApplication">
-    <p><strong>Exercice 3 : </strong>écrire un programme qui demande à l'utilisateur de saisir 5 notes au clavier et 
-    qui calcule puis affiche la moyenne obtenue.</p>
-</div>
-
-<p class="separateur"></p>
-
-<div class="exerciceApplication">
-    <p><strong>Exercice 4 : </strong>écrire un programme qui demande à l'utilisateur de saisir 
-    un rayon en centimètres, puis affiche la surface du disque ayant ce rayon en centimètres carrés.</p>
-</div>
-
-<p class="separateur"></p>
-
-<div class="exerciceApplication">
-    <p><strong>Exercice 5 : </strong>écrire un programme qui calcule pour le boulanger les sommes que doivent 
-    payer ses clients lorsqu'ils achètent une baguette à 2,30 €, un croissant à 2,10 € ou une chocolatine à 2,45 €. 
-    Le programme demande au client de nombre de baguettes, de croissants et de chocolatines qu'il veut acheter avant de donner le montant total 
-à payer.</p>
-</div>
-
-<p class="separateur"></p>
-
-<div class="exerciceApplication">
-    <p><strong>Exercice 6 :</strong> écrire un programme qui demande un nombre à l’utilisateur, puis
-        affiche si le terme saisi par l'utilisateur peut être transformé en entier (l'affichage sera uniquement <strong>True</strong> ou <strong>False</strong>, indication, pensez à <strong>isnumeric()</strong>).
-        Finalement, le code affiche "[nombre] fois 4 est égal à " (où [nombre] représente la valeur du nombre saisi), suivi du résultat de
-        cette multiplication. Par exemple si la valeur saisie est 3, le code affichera "True" puis "3 fois 4 est égal à 12".</p>
-    <div>
-        <p><button class='bouton' type="submit" onclick="affichageConditionnel(this,'solution10');"> Voir la solution </button></p>
-    </div>
-
-    <div id="solution10" style="display:none;">
-        <pre><code class="language-python">nombre = input("veuillez saisir un nombre : ")
-print(nombre.isnumeric())
-
-# on transforme la valeur saisie en entier afin d'effectuer le calcul
-nombre = int(nombre)
-print(nombre + " fois 4 est égal à " + nombre * 4)</code></pre>
-    </div>
-</div>
-
-<p class="separateur"></p>
-
-<div class="exerciceApplication">
-    <p><strong>Exercice 7 : </strong>en musique on dispose des notes suivantes do-ré-mi-fa-sol-la-si-do.
-     On peut attribuer une valeur numérique pour chacune de ces notes, qui correspond à sa fréquence à 
-    l'octave 1. On obtient dans ce cas le tableau suivant :</p>
-    <table>
-        <tr><th>note</th><th>fréquence (Hz)</th></tr>
-        <tr><td>do</td><td>65</td></tr>
-        <tr><td>ré</td><td>74</td></tr>
-        <tr><td>mi</td><td>83</td></tr>
-        <tr><td>fa</td><td>87</td></tr>
-        <tr><td>sol</td><td>98</td></tr>
-        <tr><td>la</td><td>110</td></tr>
-        <tr><td>si</td><td>123</td></tr>
-    </table>
-    <p>On remarque au passage que l'écart entre mi-fa est faible comparativement aux autres notes. 
-        Ceci s'explique par le fait qu'il n'existe qu'un demi-ton entre le mi et le fa, alors qu'il existe 
-        un ton d'écart entre les autres notes du même octave.</p>
-    <p>Un compositeur joue les 6 notes suivantes sur son clavier : mi-sol-la-si-mi-do et veut utiliser un 
-        logiciel pour calculer la tonalité principale de son air.</p>
-    <p>Ecrire un programme qui demande à l'utilisateur de saisir 6 notes, puis calcule la moyenne de ces 
-        notes pour afficher la fréquence moyenne à l'écran.</p>
-    <p>De quoi aurions-nous besoin si on voulait que le résultat affiché soit une note plutôt qu'une fréquence ?</p>
-</div>
 
 
 <!-- QUIZ -->
